--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -2,18 +2,33 @@ ext.version = [
         //app dependencies
         support           : "26.0.0-beta2",
         support_constraint: "1.0.2",
+        dagger            : "2.9",
+        javax             : "1.0",
+        rxjava            : "2.1.0",
+        rxandroid         : "2.0.1",
 
         //test dependencies
-        junit             : "4.12"
+        junit             : "4.12",
+        mockito           : "2.7.22",
+        robolectric       : "3.3.2"
 ]
 
 def version = ext.version
 ext.library = [
         //app dependencies
+        dagger            : "com.google.dagger:dagger:${version.dagger}",
+        dagger_compiler   : "com.google.dagger:dagger-compiler:${version.dagger}",
+        javax_annotation  : "javax.annotation:jsr250-api:${version.javax}",
+
         support_design    : "com.android.support:design:${version.support}",
         support_compat    : "com.android.support:appcompat-v7:${version.support}",
         support_constraint: "com.android.support.constraint:constraint-layout:${version.support_constraint}",
 
+        rxjava            : "io.reactivex.rxjava2:rxjava:${version.rxjava}",
+        rxandroid         : "io.reactivex.rxjava2:rxandroid:${version.rxandroid}",
+
         //test dependencies
-        junit             : "junit:junit:${version.junit}"
+        junit             : "junit:junit:${version.junit}",
+        mockito           : "org.mockito:mockito-core:${version.mockito}",
+        robolectric       : "org.robolectric:robolectric:${version.robolectric}"
 ]
