--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation "${libs.dagger}"
     implementation "${libs.rxjava}"
     implementation "${libs.rxandroid}"
+    implementation "${libs.gson}"
     implementation "${libs.room}"
     implementation "${libs.room_java_rx}"
 
