--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,11 @@
         <activity
             android:name=".main.MainActivity"
             android:label="@string/app_name" />
+
+        <activity
+            android:name=".login.LoginActivity"
+            android:label="@string/login" />
+
     </application>
 
 </manifest>
