Added "mock" and "prod" productFlavors

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,15 @@ android {
     dataBinding {
         enabled = true
     }
+
+    flavorDimensions "full"
+
+    productFlavors {
+        mock {
+        }
+        prod {
+        }
+    }
 }
 
 dependencies {
