--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,14 @@
             android:label="@string/app_name" />
 
         <activity
+            android:name=".addexpense.AddExpenseActivity"
+            android:label="@string/new_expense" />
+
+        <activity
+            android:name=".expensedetails.ExpenseDetailsActivity"
+            android:label="@string/expense_details" />
+
+        <activity
             android:name=".login.LoginActivity"
             android:label="@string/login" />
 
